--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,32 +1,20 @@
 * {
   box-sizing: border-box;
-  padding: 0;
+  border-radius: 25px;
+  color: white;
+  padding: 10px;
   margin: 0;
 }
 
 html,
 body {
+  background-image: linear-gradient(rgb(16, 22, 44),rgb(146, 160, 210));
+  height: 100%;
   max-width: 100vw;
   overflow-x: hidden;
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
 }
 
 a {
   color: inherit;
   text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
 }
